User menu: make 'replace text selection' independent of 'require text selection'

Also, fix cursor positioning with '%C' in combination with '%M'.

BUG: 384569